Avanzamento test e rimozione repo custom